--- a/Gervan1.html
+++ b/Gervan1.html
@@ -47,9 +47,9 @@
 		<hr>
 		<p><b><u>Lists:</u></b></p>
 		<ol>
-			<li>Two centered links</li>
+			<li>Two centred links</li>
 			<li>A table</li>
-			<li>Paragraph wuth an address</li>
+			<li>Paragraph with an address</li>
 			<li>Lists</li>
 			<li>Div</li>
 			<li>Spans</li>
