updates to grid spacing and pictures

--- a/20200311 Grids/index.html
+++ b/20200311 Grids/index.html
@@ -48,18 +48,18 @@
         </div>
       </div>
       <div class="bottomgrid"> <!-- The pictures area -->
-        <div class="pic1 boxedtext">
+        <div class="pic1 boxedarea">
           <!-- <img src="images/projects.png" alt="projects"> -->
-          <h4 class="bigger">More Than</h4>
+          <h4 class="bigger topspace">More Than</h4>
           <h4 class="bigger"><span class="menubuttonsgrn">180</span> Projects</h4>
           <p>A variety of customly designed landscapes</p>
           <p class="boxedtext">SEE ALL</p>
         </div>
         <div class="pic2">
-          <img src="images/trees.png" alt="trees">
+          <img src="images/garden1.1.png" alt="trees">
         </div>
         <div class="pic3">
-          <img src="images/garden.png" alt="garden">
+          <img src="images/garden2.1.png" alt="garden">
         </div>
       </div>
     </body>
